# c_lists

./: .bookmarks  README.md  meson.build  meson_options.txt
.github/workflows/: build.yaml  unit-tests.yaml
examples/: meson.build
examples/char_array_list_gcc/: README.md
examples/char_array_list_gcc/0/: cal_list.c  cal_list.h
examples/char_array_list_meson/: main.c  meson.build
examples/create_custom_prefix/: README.md  main.c
examples/create_custom_prefix_gcc/: README.md  cal_list.c  cal_list.h  main.c
examples/create_custom_prefix_meson/: README.md  main.c  meson.build
examples/create_custom_type_gcc/: README.md  main.c
examples/create_custom_type_meson/: README.md  meson.build
examples/create_custom_type_meson/subprojects/: c_lists.wrap
examples/the_same_list_different_type/: README.md  main.c
examples/two_lists_in_one_proj_meson/: README.md  main.c  meson.build
include/: arl_list.h
include/c_lists/: ar_list.h  arl_list.h  cll_def.h  cll_error.h  meson.build
scripts/: compile_build.sh  generate_sources.py  run_tests.sh  run_valgrind_tests.sh  setup_build.sh
src/: ar_list.c  ar_list.h  arl_list.c  cll_interfaces.h  interfaces.h  l_def.h  l_error.c  l_error.h  l_limits.h  meson.build
src/common/: cll_def.h  cll_error.c  cll_error.h  l_def.h  meson.build
src/interfaces/: README.md  cll_std_lib_interface.c  meson.build  std_lib_interface.c  std_lib_interface.h
src/utils/: cll_overflow_utils.c  cll_overflow_utils.h  cll_pointers_utils.c  cll_pointers_utils.h  memory.c  memory.h  meson.build  overflow_utils.c  overflow_utils.h  pointers_utils.c  pointers_utils.h  std_lib_utils.c  std_lib_utils.h
test/: interfaces.h  meson.build
test/test_ar_list.d/: meson.build  test_ar_list_char.c  test_ar_list_logic.c  test_ar_list_logic_2.c  test_ar_list_void_ptr.c  test_errors_utils.c  test_overflow_utils.c  test_pointers_utils.c
test/test_l_error.d/: meson.build  test_l_error.c
test/test_utils.d/: meson.build  test_overflow_utils.c  test_pointers_utils.c
test/utils/: test_utils.c  test_utils.h
